fix(modified): fix modified tooltip opening link on mobile when tapped

--- a/src/components/atoms/Modified.module.css
+++ b/src/components/atoms/Modified.module.css
@@ -4,6 +4,7 @@
   cursor: help;
   margin-left: .5rem;
   color: white;
+  margin: 0;
 }
 
 .tooltip .tooltiptext {
